--- a/kaggle/PGS4_ep7/3. machine_learning.ipynb
+++ b/kaggle/PGS4_ep7/3. machine_learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-05 09:58:01.511101: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-11-06 01:03:22.480074: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1730800681.523068   83746 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1730800681.526709   83746 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-11-05 09:58:01.539759: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1730855002.565877    4163 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1730855002.590487    4163 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-11-06 01:03:22.796585: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -1637,20 +1637,7 @@
    "execution_count": 8,
    "id": "37c33a05-21f6-49e9-82b1-a581e1a6d27b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "EOFError",
-     "evalue": "Ran out of input",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(files[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_pkl\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[0;32m----> 2\u001b[0m     stk \u001b[38;5;241m=\u001b[39m \u001b[43msgml\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSGStacking\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiles\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmodel_pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      4\u001b[0m     stk \u001b[38;5;241m=\u001b[39m sgml\u001b[38;5;241m.\u001b[39mSGStacking(pd\u001b[38;5;241m.\u001b[39mread_pickle(files[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain_pkl\u001b[39m\u001b[38;5;124m'\u001b[39m]), target, cv, predict, eval_metric, greater_better\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, return_train_scores\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[0;32m~/jnote/sunkusun9/kaggle/PGS4_ep7/sgml.py:1016\u001b[0m, in \u001b[0;36mSGStacking.load_model\u001b[0;34m(file_name)\u001b[0m\n\u001b[1;32m   1009\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1010\u001b[0m \u001b[38;5;124;03mload the model\u001b[39;00m\n\u001b[1;32m   1011\u001b[0m \u001b[38;5;124;03mParameters:\u001b[39;00m\n\u001b[1;32m   1012\u001b[0m \u001b[38;5;124;03m    file_name: str\u001b[39;00m\n\u001b[1;32m   1013\u001b[0m \u001b[38;5;124;03m        file name\u001b[39;00m\n\u001b[1;32m   1014\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1015\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(file_name, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m-> 1016\u001b[0m     model_contents \u001b[38;5;241m=\u001b[39m \u001b[43mpkl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1017\u001b[0m stk \u001b[38;5;241m=\u001b[39m SGStacking(\n\u001b[1;32m   1018\u001b[0m     model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdf_train\u001b[39m\u001b[38;5;124m'\u001b[39m], model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m   1019\u001b[0m     model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msplitter\u001b[39m\u001b[38;5;124m'\u001b[39m], model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpredict_func\u001b[39m\u001b[38;5;124m'\u001b[39m], model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meval_metric\u001b[39m\u001b[38;5;124m'\u001b[39m], model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreater_better\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m   1020\u001b[0m     sp_y \u001b[38;5;241m=\u001b[39m model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msp_y\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m   1021\u001b[0m     groups \u001b[38;5;241m=\u001b[39m model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgroups\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m   1022\u001b[0m )\n\u001b[1;32m   1023\u001b[0m stk\u001b[38;5;241m.\u001b[39mmodel_result \u001b[38;5;241m=\u001b[39m model_contents[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel_result\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if os.path.isfile(files['model_pkl']):\n",
     "    stk = sgml.SGStacking.load_model(files['model_pkl'])\n",
@@ -1668,10 +1655,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5a46c43f-13ab-48bc-a071-ff97d31fb620",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid. Score: 0.88870±0.00022\n"
+     ]
+    }
+   ],
    "source": [
     "X_tgt = ['VPVA', 'VAge', 'PA', 'VV', 'PAge', 'VP', 'PVc', 'PP', 'RV', 'RP',  'VPPV', 'VPPA', 'VPVGAP', 'VPVGAV', 'VPVGAR', 'VPRV', 'VPAV', 'AA', 'AV', 'VPPAc', 'VPRAc']\n",
     "X_ohe = ['Driving_License']\n",
@@ -1686,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bd979621-2ae4-4ad7-9c56-1181a00d22e7",
    "metadata": {},
    "outputs": [],
@@ -1714,10 +1723,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e54a9b3e-db74-4bdd-b4aa-bfab3134f85e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "X_lgb_tgt = ['VPVA', 'VAge', 'PA', 'VV', 'PAge', 'VP', 'PVc', 'PP', 'RV', 'RP',  'VPPV', 'VPPA', 'VPVGAP', 'VPVGAV', 'VPVGAR', 'VPRV', 'VPAV', 'AA', 'AV', 'VPPAc', 'VPRAc']\n",
     "X_lgb_cat = ['V2V', 'PV2', 'PV', 'GV2', 'GP', 'Driving_License', 'Vehicle_Age', 'Gender', 'Region_Code', 'Policy_Sales_Channel', 'Previously_Insured', 'Vehicle_Damage', 'Age_c', 'Vintage_c']\n",
@@ -1743,10 +1837,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5779ce98-e89a-4fb2-9247-104574b772fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if not 'lgbm1' in stk.get_selected_model():\n",
     "    m = stk.select_model('lgbm1')\n",
@@ -1763,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "aafd556e-b08a-4e10-a37d-70d49ec14d5d",
    "metadata": {},
    "outputs": [],
