--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-12 10:31:01.805247: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-13 06:50:09.303827: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1733999461.816981   83590 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1733999461.820564   83590 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-12 10:31:01.833278: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1734072609.315548   54436 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1734072609.319146   54436 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-13 06:50:09.331488: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -222,6 +222,15 @@
        "      <td>Categorical</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>VPAgA</th>\n",
+       "      <td>Vehicle_Damage, Previously_Insured, Age_S, Ann...</td>\n",
+       "      <td>combine</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11504798.0</td>\n",
+       "      <td>199137.0</td>\n",
+       "      <td>Categorical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>VPP</th>\n",
        "      <td>Vehicle_Damage, Previously_Insured, Policy_Sal...</td>\n",
        "      <td>combine</td>\n",
@@ -232,7 +241,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VPPAg</th>\n",
-       "      <td></td>\n",
+       "      <td>Vehicle_Damage, Previously_Insured, Policy_Sal...</td>\n",
        "      <td>combine</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11504798.0</td>\n",
@@ -241,7 +250,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VPPR</th>\n",
-       "      <td></td>\n",
+       "      <td>Vehicle_Damage, Previously_Insured, Policy_Sal...</td>\n",
        "      <td>combine</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11504798.0</td>\n",
@@ -268,7 +277,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VPVA</th>\n",
-       "      <td></td>\n",
+       "      <td>Vehicle_Damage, Previously_Insured, Vehicle_Ag...</td>\n",
        "      <td>combine</td>\n",
        "      <td>0.0</td>\n",
        "      <td>11504798.0</td>\n",
@@ -361,12 +370,13 @@
        "VP                             Vehicle_Damage, Previously_Insured를 결합합니다.   \n",
        "VPA                     Vehicle_Damage, Previously_Insured, Annual_Pre...   \n",
        "VPAg                    Vehicle_Damage, Previously_Insured, Age_S를 결합합니다.   \n",
+       "VPAgA                   Vehicle_Damage, Previously_Insured, Age_S, Ann...   \n",
        "VPP                     Vehicle_Damage, Previously_Insured, Policy_Sal...   \n",
-       "VPPAg                                                                       \n",
-       "VPPR                                                                        \n",
+       "VPPAg                   Vehicle_Damage, Previously_Insured, Policy_Sal...   \n",
+       "VPPR                    Vehicle_Damage, Previously_Insured, Policy_Sal...   \n",
        "VPR                     Vehicle_Damage, Previously_Insured, Region_Cod...   \n",
        "VPV                     Vehicle_Damage, Previously_Insured, Vehicle_Ag...   \n",
-       "VPVA                                                                        \n",
+       "VPVA                    Vehicle_Damage, Previously_Insured, Vehicle_Ag...   \n",
        "VPVP                    Vehicle_Damage, Previously_Insured, Vehicle_Ag...   \n",
        "VPVi                    Vehicle_Damage, Previously_Insured, Vintage_S를...   \n",
        "Vehicle_Age                                                          None   \n",
@@ -393,6 +403,7 @@
        "VP                       combine  0.0  11504798.0       4.0   \n",
        "VPA                      combine  0.0  11504798.0  150474.0   \n",
        "VPAg                     combine  0.0  11504798.0     261.0   \n",
+       "VPAgA                    combine  0.0  11504798.0  199137.0   \n",
        "VPP                      combine  0.0  11504798.0     541.0   \n",
        "VPPAg                    combine  0.0  11504798.0   18764.0   \n",
        "VPPR                     combine  0.0  11504798.0   10447.0   \n",
@@ -425,6 +436,7 @@
        "VP                                           Categorical  \n",
        "VPA                                          Categorical  \n",
        "VPAg                                         Categorical  \n",
+       "VPAgA                                        Categorical  \n",
        "VPP                                          Categorical  \n",
        "VPPAg                                        Categorical  \n",
        "VPPR                                         Categorical  \n",
@@ -480,7 +492,7 @@
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
     "def tgt_proc(df):\n",
-    "    tgt_list = ['VP', 'VPV', 'VPVi', 'VPA', 'VPAg', 'VPP', 'VPR', 'VPVP', 'VPPAg', 'VPPR', 'VPVA']\n",
+    "    tgt_list = ['VP', 'VPV', 'VPVi', 'VPA', 'VPAg', 'VPP', 'VPR', 'VPVP', 'VPPAg', 'VPPR', 'VPVA', 'VPAgA']\n",
     "    tgt_agg = {\n",
     "        i : list()\n",
     "        for i in tgt_list\n",
@@ -510,7 +522,10 @@
     "df_train['D6'] = tgt['VPVP'] - tgt['VPV']\n",
     "df_train['D7'] = tgt['VPPAg'] - tgt['VPP']\n",
     "df_train['D8'] = tgt['VPPR'] - tgt['VPP']\n",
-    "df_train['D9'] = tgt['VPVA'] - tgt['VPV']"
+    "df_train['D9'] = tgt['VPVA'] - tgt['VPV']\n",
+    "df_train['D10'] = tgt['VPAgA'] - tgt['VPAg']\n",
+    "\n",
+    "del tgt"
    ]
   },
   {
@@ -538,6 +553,7 @@
     "    'score_func': lambda df, prds: roc_auc_score(df[target].sort_index(), prds.sort_index()),\n",
     "    'validation_splitter': get_validation_splitter,\n",
     "    'progress_callback': sgml.ProgressCallBack(),\n",
+    "    'return_train_scores': False,\n",
     "    'y': target,\n",
     "}\n",
     "\n",
@@ -671,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "97035c4e-86e6-4e56-84f1-ff1b07167b11",
    "metadata": {},
    "outputs": [],
@@ -681,17 +697,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4544e521-16c8-4430-b771-958f8a71271c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8893842531592895, 0.8898771781172918)"
+       "(0.8893991866726226, 0.8898451042927238)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +716,7 @@
     "hparams = {\n",
     "    'model_params': {},\n",
     "    'X_tgt': ['Annual_Premium_S'],\n",
-    "    'X_mm': ['Annual_Premium', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9'], \n",
+    "    'X_mm': ['Annual_Premium', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9', 'D10'], \n",
     "    'X_ohe': ['Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender', 'Driving_License'],\n",
     "    'ohe': {'drop': 'first', 'handle_unknown': 'ignore'},\n",
@@ -719,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "05a78a01-4129-4313-8a8c-82fb35794cdd",
    "metadata": {},
    "outputs": [],
@@ -729,64 +745,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "84217af5-3bc2-46c6-93a8-6131512844fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "3e3ae18341694b1fb81dbdceeb5fd057",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fold:   0%|          | 0/1 [00:00<?, ?it/s]"
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([0.8918887516098899], [0.8953382125492378])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "hparams = {\n",
-    "    'model_params': {'n_estimators': 1000, 'learning_rate': 0.15, 'max_depth': 9},\n",
-    "    'X_num': ['Annual_Premium', 'Age', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9'], \n",
+    "    'model_params': {'n_estimators': 1200, 'learning_rate': 0.15, 'max_depth': 9},\n",
+    "    'X_num': ['Annual_Premium', 'Age', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9', 'D10'], \n",
     "    'X_cat': ['Annual_Premium_S', 'Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender', 'Driving_License'],\n",
-    "    'validation_fraction': 0.1\n",
     "}\n",
-    "result = cb1.adhoc(df_train, ss, hparams, task_type='GPU')\n",
-    "result['valid_scores'], result['train_scores']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9a3aa39-660c-48c7-ac00-128cda54843c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result['model_result'][0]['valid_result'][('Logloss', 'validation')].idxmin()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00a679c5-09da-4c8e-b75e-57c19e70af2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "result = cb1.cv(df_train, hparams, cb_adapter, task_type='GPU')\n",
     "result['valid_scores'], result['train_scores']"
    ]
@@ -801,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "31bb7fed-7e30-45c0-b084-00d5da724388",
    "metadata": {},
    "outputs": [],
@@ -811,14 +795,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
+   "id": "d6af4eb9-1afc-4f38-b681-c445d592d2d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_type = pd.CategoricalDtype(['etc'] + df_train['VPA'].value_counts().pipe(lambda x: x.loc[x >= 10].index.tolist()))\n",
+    "df_train['VPA2'] = dproc.rearrange_cat(df_train['VPA'], c_type, lambda c, v: 0 if v not in c else v, use_set = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "94d1c1dc-abd8-45b3-86db-ae765abacf6b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "01e8ef094f294b2180010114a32ade39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -842,30 +837,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([0.8922081795388015], [0.8947550790031303])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "hparams = {\n",
-    "    'model_params': {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 127},\n",
+    "    'model_params': {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 255},\n",
     "    'X_tgt': ['Annual_Premium_S'],\n",
-    "    'X_num': ['Annual_Premium', 'Age', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9'], \n",
+    "    'X_num': ['Annual_Premium', 'Age', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9', 'D10'], \n",
     "    'X_cat': ['Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender', 'Driving_License'],\n",
     "    'validation_fraction': 0.1\n",
     "}\n",
     "\n",
-    "result = lgb1.adhoc(df_train, ss, hparams)\n",
-    "result['valid_scores'], result['train_scores']"
+    "#result = lgb1.adhoc(df_train, ss, hparams)\n",
+    "#result['valid_scores'], result['train_scores']"
    ]
   },
   {
