--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-13 06:50:09.303827: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-16 09:59:41.451606: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1734072609.315548   54436 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1734072609.319146   54436 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-13 06:50:09.331488: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1734343181.584619   76764 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1734343181.626273   76764 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-16 09:59:41.954787: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4544e521-16c8-4430-b771-958f8a71271c",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
        "(0.8893991866726226, 0.8898451042927238)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
     "              'Gender', 'Driving_License'],\n",
     "    'ohe': {'drop': 'first', 'handle_unknown': 'ignore'},\n",
     "}\n",
-    "result = lr.cv(df_train, hparams, result_proc=sgml.m_learning_result)\n",
+    "result = lr.cv(df_train, hparams)\n",
     "np.mean(result['valid_scores']), np.mean(result['train_scores'])"
    ]
   },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "05a78a01-4129-4313-8a8c-82fb35794cdd",
    "metadata": {},
    "outputs": [],
@@ -745,23 +745,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "84217af5-3bc2-46c6-93a8-6131512844fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e3ae18341694b1fb81dbdceeb5fd057",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+       "[0.912832156117249,\n",
+       " 0.9135115404896508,\n",
+       " 0.9130131019924064,\n",
+       " 0.9125704627071697,\n",
+       " 0.9130748405374779]"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -771,8 +771,8 @@
     "    'X_cat': ['Annual_Premium_S', 'Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender', 'Driving_License'],\n",
     "}\n",
-    "result = cb1.cv(df_train, hparams, cb_adapter, task_type='GPU')\n",
-    "result['valid_scores'], result['train_scores']"
+    "result = cb1.cv(df_train, hparams, task_type='GPU')\n",
+    "result['valid_scores']"
    ]
   },
   {
@@ -887,8 +887,8 @@
     "    'ohe': {'drop': 'if_binary'}\n",
     "}\n",
     "\n",
-    "result = lgb1.cv(df_train, hparams, xgb_adapter, device='cuda')\n",
-    "result['valid_scores'], result['train_scores']"
+    "#result = lgb1.cv(df_train, hparams, xgb_adapter, device='cuda')\n",
+    "#result['valid_scores'], result['train_scores']"
    ]
   },
   {
@@ -956,34 +956,17 @@
     "    'X_cat': ['Annual_Premium_S', 'Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender'],\n",
     "}\n",
-    "result = nn.cv(df_train, hparams, progress_callback=sgml.ProgressCallBack())\n",
-    "np.mean(result['valid_scores']), np.mean(result['train_scores'])"
+    "# result = nn.cv(df_train, hparams, progress_callback=sgml.ProgressCallBack())\n",
+    "# np.mean(result['valid_scores']), np.mean(result['train_scores'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9955f73a-6fa0-464a-bdc5-83cac1802e18",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.8904762718319137,\n",
-       " 0.8905780191107577,\n",
-       " 0.8906179017310272,\n",
-       " 0.8906771654051973,\n",
-       " 0.890385738839719]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result['valid_scores']"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
