--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-16 09:59:41.451606: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-20 10:50:52.791631: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1734343181.584619   76764 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1734343181.626273   76764 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-16 09:59:41.954787: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1734691852.915443   80711 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1734691852.946804   80711 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-20 10:50:53.277351: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -697,17 +697,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4544e521-16c8-4430-b771-958f8a71271c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8893991866726226, 0.8898451042927238)"
+       "0.8894339951376733"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
     "    'ohe': {'drop': 'first', 'handle_unknown': 'ignore'},\n",
     "}\n",
     "result = lr.cv(df_train, hparams)\n",
-    "np.mean(result['valid_scores']), np.mean(result['train_scores'])"
+    "np.mean(result['valid_scores'])"
    ]
   },
   {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "05a78a01-4129-4313-8a8c-82fb35794cdd",
    "metadata": {},
    "outputs": [],
@@ -745,21 +745,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "84217af5-3bc2-46c6-93a8-6131512844fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.912832156117249,\n",
-       " 0.9135115404896508,\n",
-       " 0.9130131019924064,\n",
-       " 0.9125704627071697,\n",
-       " 0.9130748405374779]"
+       "[0.9126178690377024,\n",
+       " 0.9130142964983072,\n",
+       " 0.912422497537402,\n",
+       " 0.9122647592784842,\n",
+       " 0.9128431627370229]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "31bb7fed-7e30-45c0-b084-00d5da724388",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "d6af4eb9-1afc-4f38-b681-c445d592d2d2",
    "metadata": {},
    "outputs": [],
@@ -806,39 +806,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "94d1c1dc-abd8-45b3-86db-ae765abacf6b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01e8ef094f294b2180010114a32ade39",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fold:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Round:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hparams = {\n",
     "    'model_params': {'n_estimators': 1000, 'learning_rate': 0.01, 'num_leaves': 255},\n",
@@ -863,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6bc3ac04-a970-47f5-9fce-24da4b62176d",
    "metadata": {},
    "outputs": [],
@@ -873,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "10223464-b550-49dd-9a8e-d89cba9b25a2",
    "metadata": {},
    "outputs": [],
@@ -901,22 +872,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "c75d8001-6c04-4975-a7aa-3acabf1f2f27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn = sgml.CVModel.load_or_create('result', 'NN1', skf, config, nn_adapter)"
+    "# nn = sgml.CVModel.load_or_create('result', 'NN1', skf, config, nn_adapter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0887ab7c-23f0-4233-ae1f-11d5443f8a3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_nn_emb = [\n",
+    "\"\"\"X_nn_emb = [\n",
     "    ('Annual_Premium_S', 4), ('Vehicle_Damage', 1), ('Previously_Insured', 1), ('Policy_Sales_Channel_S', 3), ('Age_S', 3), ('Vehicle_Age', 1), ('Region_Code_S', 2), \n",
     "    ('Gender', 1)\n",
     "]\n",
@@ -955,9 +937,10 @@
     "    'X_mm': ['Annual_Premium', 'Age', 'Driving_License', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'D8', 'D9'], \n",
     "    'X_cat': ['Annual_Premium_S', 'Vehicle_Damage', 'Previously_Insured', 'Policy_Sales_Channel_S', 'Age_S', 'Vehicle_Age', 'Region_Code_S', \n",
     "              'Gender'],\n",
-    "}\n",
+    "}\"\"\"\n",
     "# result = nn.cv(df_train, hparams, progress_callback=sgml.ProgressCallBack())\n",
-    "# np.mean(result['valid_scores']), np.mean(result['train_scores'])"
+    "# np.mean(result['valid_scores']), np.mean(result['train_scores'])\n",
+    "''"
    ]
   },
   {
@@ -966,12 +949,14 @@
    "id": "9955f73a-6fa0-464a-bdc5-83cac1802e18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cb1.train(df_train, task_type='GPU')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcbb2039-c6d8-4bc8-a718-204f7d0483a0",
+   "id": "7c527091-72ef-413d-80cf-0bb1e4fd4ed1",
    "metadata": {},
    "outputs": [],
    "source": []
