--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-20 10:50:52.791631: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-23 08:19:41.059798: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1734691852.915443   80711 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1734691852.946804   80711 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-20 10:50:53.277351: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1734941981.071374   60144 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1734941981.074922   60144 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-23 08:19:41.087018: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -745,21 +745,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "84217af5-3bc2-46c6-93a8-6131512844fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "[0.9126178690377024,\n",
-       " 0.9130142964983072,\n",
-       " 0.912422497537402,\n",
-       " 0.9122647592784842,\n",
-       " 0.9128431627370229]"
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 9,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.9122161426137696,\n",
+       " 0.9132710329517875,\n",
+       " 0.9127868432080682,\n",
+       " 0.9125326729181358,\n",
+       " 0.9129593986171544]"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c75d8001-6c04-4975-a7aa-3acabf1f2f27",
    "metadata": {},
    "outputs": [],
@@ -882,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "0887ab7c-23f0-4233-ae1f-11d5443f8a3a",
    "metadata": {},
    "outputs": [
@@ -892,7 +906,7 @@
        "''"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,10 +959,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9955f73a-6fa0-464a-bdc5-83cac1802e18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'variables': array(['cat__Annual_Premium_S', 'cat__Vehicle_Damage',\n",
+       "        'cat__Previously_Insured', 'cat__Policy_Sales_Channel_S',\n",
+       "        'cat__Age_S', 'cat__Vehicle_Age', 'cat__Region_Code_S',\n",
+       "        'cat__Gender', 'cat__Driving_License', 'pt__Annual_Premium',\n",
+       "        'pt__Age', 'pt__D1', 'pt__D2', 'pt__D3', 'pt__D4', 'pt__D5',\n",
+       "        'pt__D6', 'pt__D7', 'pt__D8', 'pt__D9', 'pt__D10'], dtype=object),\n",
+       " 'train_shape': (11504798, 21),\n",
+       " 'target': 'Response',\n",
+       " 'target_func': None}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cb1.train(df_train, task_type='GPU')"
    ]
