--- a/kaggle/PGS4_ep7/2. machine learning.ipynb
+++ b/kaggle/PGS4_ep7/2. machine learning.ipynb
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-23 08:19:41.059798: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-24 06:15:51.439066: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1734941981.071374   60144 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1734941981.074922   60144 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-12-23 08:19:41.087018: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1735020951.571328   46763 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1735020951.609713   46763 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-24 06:15:51.956433: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -745,35 +745,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "84217af5-3bc2-46c6-93a8-6131512844fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+       "[0.91197412898988,\n",
+       " 0.9128653591163912,\n",
+       " 0.9130351624263097,\n",
+       " 0.9129334930848559,\n",
+       " 0.9128286380114352]"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.9122161426137696,\n",
-       " 0.9132710329517875,\n",
-       " 0.9127868432080682,\n",
-       " 0.9125326729181358,\n",
-       " 0.9129593986171544]"
-      ]
-     },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "9955f73a-6fa0-464a-bdc5-83cac1802e18",
    "metadata": {},
    "outputs": [
@@ -977,7 +963,7 @@
        " 'target_func': None}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,8 +974,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "f0785842-6303-49ac-8fce-74dc6157c205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = pd.read_parquet(files['test_parquet']).set_index('id')\n",
+    "df_test, _ = pd_procs.procs_all(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "6bee4d45-5aa2-4fd0-bda0-2d04ca3f2589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tgt_list = ['VP', 'VPV', 'VPVi', 'VPA', 'VPAg', 'VPP', 'VPR', 'VPVP', 'VPPAg', 'VPPR', 'VPVA', 'VPAgA']\n",
+    "df_tgt_test = sc.cache_result(\n",
+    "    'tgt_test',\n",
+    "    lambda : pd.concat([\n",
+    "        pd.Series(\n",
+    "            TargetEncoder(random_state=123).fit(df_train[[i]], df_train[target]).transform(df_test[[i]])[:, 0],\n",
+    "            index = df_test[i].index, name= i\n",
+    "        ) for i in tgt_list\n",
+    "    ], axis=1)\n",
+    ")\n",
+    "\n",
+    "df_test['D1'] = df_tgt_test['VPVi'] - df_tgt_test['VP']\n",
+    "df_test['D2'] = df_tgt_test['VPA'] - df_tgt_test['VP']\n",
+    "df_test['D3'] = df_tgt_test['VPAg'] - df_tgt_test['VP']\n",
+    "df_test['D4'] = df_tgt_test['VPP'] - df_tgt_test['VP']\n",
+    "df_test['D5'] = df_tgt_test['VPR'] - df_tgt_test['VP']\n",
+    "df_test['D6'] = df_tgt_test['VPVP'] - df_tgt_test['VPV']\n",
+    "df_test['D7'] = df_tgt_test['VPPAg'] - df_tgt_test['VPP']\n",
+    "df_test['D8'] = df_tgt_test['VPPR'] - df_tgt_test['VPP']\n",
+    "df_test['D9'] = df_tgt_test['VPVA'] - df_tgt_test['VPV']\n",
+    "df_test['D10'] = df_tgt_test['VPAgA'] - df_tgt_test['VPAg']\n",
+    "\n",
+    "del df_tgt_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a701e906-bf33-4722-b665-b6376f92817b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del df_tgt_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "7c527091-72ef-413d-80cf-0bb1e4fd4ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id\n",
+       "11504798    0.005462\n",
+       "11504799    0.708622\n",
+       "11504800    0.439974\n",
+       "11504801    0.000117\n",
+       "11504802    0.079150\n",
+       "              ...   \n",
+       "19174659    0.160997\n",
+       "19174660    0.000316\n",
+       "19174661    0.000522\n",
+       "19174662    0.717448\n",
+       "19174663    0.000207\n",
+       "Length: 7669866, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cb1.get_predictor()(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c7ef18c-d98e-4b77-9b74-e9e3c76f6bff",
    "metadata": {},
    "outputs": [],
    "source": []
